fixed nav, fixed footer, fixed spacing

--- a/src/styling/components/footer.scss
+++ b/src/styling/components/footer.scss
@@ -1,5 +1,6 @@
 .address {
 	display: flex;
+	text-align: start;
 }
 .footerHead {
 	display: flex;
@@ -35,6 +36,10 @@ footer {
 	width: 100% !important;
 	max-width: 100% !important;
 	min-height: 90%;
+	svg {
+		min-height: 32px !important;
+		min-width: 32px !important;
+	}
 }
 #contact {
 	min-height: 50rem !important;
@@ -42,4 +47,10 @@ footer {
 	background-size: cover;
 	background-position: 50% 40%;
 	padding-bottom: 5rem;
+}
+@media (max-width: 322px) {
+	.address {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 }
